--- a/style.css
+++ b/style.css
@@ -83,3 +83,37 @@
     font-size: 0.7em;
     margin: 8px 10px;
 }
+
+.login_icons {
+    display: flex;
+    gap: 10px;
+    margin-top: 20px;
+    width: 100%;
+}
+
+.login_icons img {
+    width: 20px;
+}
+
+.icons_button {
+    width: 33.33%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 35px;
+    border-radius: 5px;
+    cursor: pointer;
+    border: none;
+}
+
+.login_icons .icons_button:nth-child(1) {
+    background-color: var(--blue);
+}
+
+.login_icons .icons_button:nth-child(2) {
+    background-color: var(--light-grey);
+}
+
+.login_icons .icons_button:nth-child(3) {
+    background-color: var(--black);
+}
