--- a/style.css
+++ b/style.css
@@ -22,15 +22,27 @@
     --red: #CF3C3F;
 }
 
+main {
+    display: flex;
+}
+
 .login {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: center;
+    justify-content: space-between;
+    width: 100%;
     max-width: 500px;
     min-height: 100vh; /* vh = Relative to 1% of the height of the viewport */
     padding: clamp(35px, 8%, 70px); /* clamp(min, preference, max) */
+}
 
+.wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .login_logo {
@@ -110,10 +122,101 @@
     background-color: var(--blue);
 }
 
+.login_icons .icons_button:nth-child(1):hover {
+    background-color: #0966de;
+}
+
 .login_icons .icons_button:nth-child(2) {
-    background-color: var(--light-grey);
+    background-color: var(--white);
+    border: 2px solid var(--grey);
+}
+
+.login_icons .icons_button:nth-child(2):hover {
+    background-color: var(--whitesmoke);
 }
 
 .login_icons .icons_button:nth-child(3) {
     background-color: var(--black);
+}
+
+.login_icons .icons_button:nth-child(3):hover {
+    background-color: #141414;
+}
+
+.login_label_checkbox {
+    width: 100%;
+    margin: 15px 0 50px;
+    font-size: 0.9em;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+}
+
+.input_checkbox {
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    background-color: var(--light-grey);
+    margin-right: 3px;
+    border-radius: 4px;
+}
+
+.input_checkbox:checked {
+    background-color: var(--red);
+}
+
+.input_checkbox:checked::after {
+    content: "";
+    display: block;
+    width: 5px;
+    height: 10px;
+    border: 3px solid white;
+    border-width: 0 3px 3px 0;
+    transform: rotate(45deg);
+    margin: 2px 6px;
+}
+
+.login_button {
+    width: 60px;
+    height: 60px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--red);
+    border-radius: 20px;
+    border: none;
+    cursor: pointer;
+    margin-bottom: 60px;
+}
+
+.login_button svg {
+    fill: white;
+}
+
+.login_button:disabled {
+    cursor: auto;
+    background-color: white;
+    border: 2px solid var(--light-grey);
+}
+
+.login_button:disabled svg {
+    fill: var(--grey)
+}
+
+.login_link {
+    font-size: 0.8em;
+    text-decoration: none;
+    color: var(--medium-grey);
+    text-transform: uppercase;
+    margin-bottom: 5px;
+    font-weight: 700;
+}
+
+.wallpaper {
+    width: 100%;
+    background-image: url('./images/wallpaper.jpg');
+    background-size: cover;
+    background-position: center;
+    flex: 1;
 }
